--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 title: Cynthia Tia # your name (or website title) here
 logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
+  Current Role
   <br><br>
-  Second description 
+  About Me
   <br><br>
   <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
   
