--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 title: Cynthia Tia # your name (or website title) here
 logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  Current Role
+  Planner at Niagara Region
   <br><br>
-  About Me
+  I'm an urban planner driven by a deep passion for policymaking, climate change strategies, and sustainable development. My work revolves around creating cities that are economically vibrant while also prioritizing environmental resilience and social equity.
   <br><br>
   <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
   
