--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: > # your text below (remove <br> elements if you don't need line br
   <br><br>
   I'm an urban planner driven by a deep passion for policymaking, climate change strategies, and sustainable development. My work revolves around creating cities that are economically vibrant while also prioritizing environmental resilience and social equity.
   <br><br>
-  <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
+  <a href="https://www.linkedin.com/in/cynlktia/">View My LinkedIn Profile</a> 
   
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
